# hubert

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE.txt  README.md
.github/workflows/: hubertTests.yml
include/: hubert.hpp
test/hubertTests/: CMakeLists.txt  hubertTests.cpp
